Исправление бага, который связан с CORS

--- a/src/app/components/dumb/contact-tab/contact-tab.component.html
+++ b/src/app/components/dumb/contact-tab/contact-tab.component.html
@@ -34,4 +34,8 @@
             <input matInput type="text" placeholder="Введите комментарий" formControlName="comment" />
         </mat-form-field>
     </div>
+  <div class="submit-btn">
+    <button mat-raised-button color="accent" class="button">Отправить</button>
+  </div>
+
 </form>
