--- a/src/app/components/dumb/contact-tab/contact-tab.component.html
+++ b/src/app/components/dumb/contact-tab/contact-tab.component.html
@@ -35,7 +35,7 @@
         </mat-form-field>
     </div>
   <div class="submit-btn">
-    <button mat-raised-button color="accent" class="button">Отправить</button>
+    <button mat-raised-button color="accent" class="button" [disabled]="contactForm.invalid">Отправить</button>
   </div>
 
 </form>
