Исправление структуры, добавление дополнительных валидаторов для форм

--- a/src/app/components/dumb/side-bar-operator/side-bar-operator.component.html
+++ b/src/app/components/dumb/side-bar-operator/side-bar-operator.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container class="example-container">
-    <mat-sidenav [opened]="sideWorks" mode="side">
+    <mat-sidenav [opened]="sideWorks" mode="push">
         <app-operator-steps></app-operator-steps>
         <div class="center-btn">
             <button class="btnExitSession" mat-raised-button color="accent">Завершить сессию</button>
