--- a/src/app/components/dumb/comment/comment.component.scss
+++ b/src/app/components/dumb/comment/comment.component.scss
@@ -10,8 +10,8 @@
 
 .comments-list {
     display: block;
-    max-height: 35vh;
-    overflow-y: scroll;
+      /*min-height: 35vh;
+      overflow-y: scroll;*/
 }
 
 .input-icon {
