--- a/src/app/components/dumb/side-bar-operator/side-bar-operator.component.scss
+++ b/src/app/components/dumb/side-bar-operator/side-bar-operator.component.scss
@@ -22,5 +22,7 @@ mat-sidenav-container {
 }
 
 .center-btn {
-    text-align: center;
+    position: absolute;
+    bottom: 50px;
+    left: 30%;
 }
