--- a/src/app/components/dumb/info-client/info-client.component.scss
+++ b/src/app/components/dumb/info-client/info-client.component.scss
@@ -1,6 +1,7 @@
 .info-client {
-    width: 60%;
-    margin: auto;
+    width: 55%;
+    margin-left: 20%;
+    margin-right: auto;
 }
 .full-name {
     color: rgb(231, 228, 228);
