--- a/src/app/components/dumb/tool-bar-operator/tool-bar-operator.component.html
+++ b/src/app/components/dumb/tool-bar-operator/tool-bar-operator.component.html
@@ -4,12 +4,13 @@
             <img class="icon-toolbar-menu" src="https://image.flaticon.com/icons/svg/148/148806.svg" />
             <span (click)="redirectToTask()" class="verification">Верификация</span>
         </div>
-        <div class="user-section-toolbar">
+        <div class="user-section-toolbar" (mouseenter)="showUserMenu(true)">
             <img class="icons-toolbar" src="https://image.flaticon.com/icons/svg/149/149071.svg" />
             <div class="text-info-toolbar">
                 <div class="name-user-toolbar">{{ userName }}</div>
                 <div class="status-user-toolbar">Готов</div>
             </div>
+            <app-user-menu *ngIf="isShowUserMenu" (mouseleave)="showUserMenu(false)" class="user-menu"></app-user-menu>
         </div>
     </mat-toolbar-row>
 </mat-toolbar>
