--- a/src/app/components/dumb/tool-bar-operator/tool-bar-operator.component.scss
+++ b/src/app/components/dumb/tool-bar-operator/tool-bar-operator.component.scss
@@ -40,39 +40,53 @@ mat-toolbar-row {
 
 .text-info-toolbar {
     display: block;
-    height: 45px;
-    overflow: auto;
+    height: 50px;
+    overflow: hidden;
 }
 
 .name-user-toolbar,
 .status-user-toolbar {
     position: relative;
     display: block;
-    height: 50%;
 }
 
 .name-user-toolbar {
     font-size: 16pt;
-    display: block;
     color: white;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 58%;
 }
 
 .status-user-toolbar {
-    display: block;
     font-size: 8pt;
     font-weight: lighter;
     color: gray;
+    height: 42%;
 }
 
 .user-section-toolbar {
+    position: relative;
     display: flex;
     align-items: center;
     margin-right: 15px;
     height: 100%;
     padding: 0 1em;
-    max-width: 20em;
+    max-width: 15em;
 }
 
 .user-section-toolbar:hover {
     background-color: #151515;
+}
+
+.user-menu {
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    height: 200px;
+    z-index: 3;
+    background-color: rgba(43, 43, 43, 0.6);
+    text-align: center;
 }
