--- a/src/app/components/dumb/comment/comment.component.html
+++ b/src/app/components/dumb/comment/comment.component.html
@@ -11,7 +11,7 @@
         </mat-form-field>
     </form>
 </div>
-<div class="comments-list">
+<div class="comment-list">
     <mat-card *ngFor="let comment of commentList$ | async" class="comment-card">
         <mat-card-title-group>
             <mat-card-title>Сообщение системы</mat-card-title>
