--- a/src/app/components/dumb/comment/comment.component.scss
+++ b/src/app/components/dumb/comment/comment.component.scss
@@ -8,7 +8,7 @@
     margin-bottom: 15px;
 }
 
-.comments-list {
+.comment-list {
     display: block;
       /*min-height: 35vh;
       overflow-y: scroll;*/
