Поправлена контактность. Выводятся все контакты. Есть правки по удалению комментариев и добавлению пробелов в код

--- a/src/app/components/dumb/side-bar-operator/side-bar-operator.component.html
+++ b/src/app/components/dumb/side-bar-operator/side-bar-operator.component.html
@@ -2,7 +2,7 @@
     <mat-sidenav [opened]="sideWorks" mode="side">
         <app-operator-steps></app-operator-steps>
         <div class="center-btn">
-            <button class="btnExitSession" mat-raised-button color="accent">Завершить сессию</button>
+            <button mat-raised-button color="accent">Завершить сессию</button>
         </div>
     </mat-sidenav>
 </mat-sidenav-container>
