--- a/src/app/components/dumb/side-bar-operator/side-bar-operator.component.scss
+++ b/src/app/components/dumb/side-bar-operator/side-bar-operator.component.scss
@@ -11,18 +11,11 @@ mat-sidenav {
     box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.24);
 }
 
-.btnExitSession {
-    top: 50%;
-    width: 150px;
-    height: 50px;
-}
-
 mat-sidenav-container {
     background-color: transparent;
 }
 
 .center-btn {
-    position: absolute;
-    bottom: 50px;
-    left: 30%;
+    text-align: center;
+    width: 100%;
 }
