--- a/src/app/components/feature/contact-tab/contact-tab.component.html
+++ b/src/app/components/feature/contact-tab/contact-tab.component.html
@@ -1,40 +1,35 @@
+<div class="form-container" *ngFor="let item of informationList$ | async">
 <form [formGroup]="contactForm" (ngSubmit)="submit()">
     <div class="base-inputs">
         <mat-form-field appearance="outline" color="accent">
-            <input matInput type="text" placeholder="Номер телефона" formControlName="numberPhone" />
+            <input matInput type="text" placeholder="Номер телефона" value="{{ item.phone }}"/>
         </mat-form-field>
         <mat-form-field appearance="outline" color="accent">
-            <input matInput type="text" placeholder="ФИО контакта" formControlName="fullName" />
+            <input matInput type="text" placeholder="ФИО контакта" value="{{ item.firstName + ' ' + item.lastName }}"/>
         </mat-form-field>
     </div>
     <div class="base-inputs">
         <mat-form-field appearance="outline" color="accent">
             <mat-label>Тип телефона</mat-label>
-            <mat-select formControlName="phoneType">
-                <ng-container *ngFor="let item of informationList$ | async">
+            <mat-select value= "{{ item.phoneType }}">
                     <mat-option value="{{ item.phoneType }}">
-                        {{ item.phoneType }}
+                      {{ item.phoneType }}
                     </mat-option>
-                </ng-container>
             </mat-select>
         </mat-form-field>
         <mat-form-field appearance="outline" color="accent">
             <mat-label>Департамент</mat-label>
-            <mat-select formControlName="departament">
-                <ng-container *ngFor="let item of informationList$ | async">
+            <mat-select value="{{ item.departament }}">
                     <mat-option value="{{ item.departament }}">
                         {{ item.departament }}
                     </mat-option>
-                </ng-container>
             </mat-select>
         </mat-form-field>
     </div>
     <div class="base-inputs">
         <mat-form-field class="comment-input-box" appearance="outline" color="accent">
-            <input matInput type="text" placeholder="Введите комментарий" formControlName="comment" />
+            <input matInput type="text" placeholder="Введите комментарий"/>
         </mat-form-field>
     </div>
-    <div class="submit-btn">
-        <button mat-raised-button color="accent" class="button" [disabled]="contactForm.invalid">Отправить</button>
-    </div>
 </form>
+</div>
