--- a/src/app/components/feature/contact-tab/contact-tab.component.html
+++ b/src/app/components/feature/contact-tab/contact-tab.component.html
@@ -1,10 +1,12 @@
 <div class="form-container" *ngFor="let item of informationList$ | async">
-<form [formGroup]="contactForm" (ngSubmit)="submit()">
+<div class="form-contact">
     <div class="base-inputs">
         <mat-form-field appearance="outline" color="accent">
-            <input matInput type="text" placeholder="Номер телефона" value="{{ item.phone }}"/>
+          <mat-label>Номер телефона</mat-label>
+            <input matInput type="text" placeholder="Введите номер телефона" value="{{ item.phone }}"/>
         </mat-form-field>
         <mat-form-field appearance="outline" color="accent">
+          <mat-label>ФИО контакта</mat-label>
             <input matInput type="text" placeholder="ФИО контакта" value="{{ item.firstName + ' ' + item.lastName }}"/>
         </mat-form-field>
     </div>
@@ -31,5 +33,5 @@
             <input matInput type="text" placeholder="Введите комментарий"/>
         </mat-form-field>
     </div>
-</form>
+</div>
 </div>
