--- a/src/app/components/feature/contact-tab/contact-tab.component.scss
+++ b/src/app/components/feature/contact-tab/contact-tab.component.scss
@@ -12,18 +12,18 @@ mat-form-field {
     width: 100%;
 }
 
-.form-container{
-  display: flex;
-}
-
-form {
-    margin: auto;
-    border: solid #e7e8ea 0.1em;
-    border-radius: 0.5em;
-    margin-top: 40px;
-    padding: 20px;
+.form-container {
+    display: flex;
 }
 
 .submit-btn {
     text-align: center;
+}
+
+.form-contact {
+    margin: auto;
+    border: solid #e7e8ea 0.1em;
+    border-radius: 0.5em;
+    margin-top: 40px;
+    padding: 10px;
 }
