Последние комментарие всегда вверху, добавлен отступ для блока комментариев

--- a/src/app/components/feature/contact-tab/contact-tab.component.html
+++ b/src/app/components/feature/contact-tab/contact-tab.component.html
@@ -7,7 +7,7 @@
         </mat-form-field>
         <mat-form-field appearance="outline" color="accent">
           <mat-label>ФИО контакта</mat-label>
-            <input matInput type="text" placeholder="ФИО контакта" value="{{ item.firstName + ' ' + item.lastName }}"/>
+            <input matInput type="text" placeholder="Введите ФИО контакта" value="{{ item.firstName + ' ' + item.lastName }}"/>
         </mat-form-field>
     </div>
     <div class="base-inputs">
