--- a/src/app/components/feature/contact-tab/contact-tab.component.html
+++ b/src/app/components/feature/contact-tab/contact-tab.component.html
@@ -1,37 +1,3 @@
-<div class="form-container" *ngFor="let item of informationList$ | async">
-<div class="form-contact">
-    <div class="base-inputs">
-        <mat-form-field appearance="outline" color="accent">
-          <mat-label>Номер телефона</mat-label>
-            <input matInput type="text" placeholder="Введите номер телефона" value="{{ item.phone }}"/>
-        </mat-form-field>
-        <mat-form-field appearance="outline" color="accent">
-          <mat-label>ФИО контакта</mat-label>
-            <input matInput type="text" placeholder="Введите ФИО контакта" value="{{ item.firstName + ' ' + item.lastName }}"/>
-        </mat-form-field>
-    </div>
-    <div class="base-inputs">
-        <mat-form-field appearance="outline" color="accent">
-            <mat-label>Тип телефона</mat-label>
-            <mat-select value= "{{ item.phoneType }}">
-                    <mat-option value="{{ item.phoneType }}">
-                      {{ item.phoneType }}
-                    </mat-option>
-            </mat-select>
-        </mat-form-field>
-        <mat-form-field appearance="outline" color="accent">
-            <mat-label>Департамент</mat-label>
-            <mat-select value="{{ item.departament }}">
-                    <mat-option value="{{ item.departament }}">
-                        {{ item.departament }}
-                    </mat-option>
-            </mat-select>
-        </mat-form-field>
-    </div>
-    <div class="base-inputs">
-        <mat-form-field class="comment-input-box" appearance="outline" color="accent">
-            <input matInput type="text" placeholder="Введите комментарий"/>
-        </mat-form-field>
-    </div>
-</div>
-</div>
+<ng-container *ngFor="let item of informationList$ | async">
+    <app-contact [(itemContact)]="item"> </app-contact>
+</ng-container>
