Форма теперь это отдельный компонент

--- a/src/app/components/smart/contact/contact.component.scss
+++ b/src/app/components/smart/contact/contact.component.scss
@@ -16,10 +16,11 @@ mat-form-field {
   display: flex;
 }
 
-.form-contact {
+form {
   margin: auto;
   border: solid #e7e8ea 0.1em;
   border-radius: 0.5em;
   margin-top: 40px;
-  padding: 10px;
+  padding: 8px;
+  width: 600px;
 }
