--- a/src/app/components/smart/contact/contact.component.html
+++ b/src/app/components/smart/contact/contact.component.html
@@ -1,10 +1,9 @@
-<ng-content></ng-content>
 <div class="form-container">
-    <div class="form-contact">
+    <form [formGroup]="contactForm" (ngSubmit)="submit()">
         <div class="base-inputs">
             <mat-form-field appearance="outline" color="accent">
                 <mat-label>Номер телефона</mat-label>
-                <input matInput type="text" placeholder="Введите номер телефона" value="{{ itemContact.phone }}" />
+                <input matInput type="text" placeholder="Введите номер телефона" value="{{ itemContact.phone }}" formControlName="numberPhone"/>
             </mat-form-field>
             <mat-form-field appearance="outline" color="accent">
                 <mat-label>ФИО контакта</mat-label>
@@ -13,6 +12,7 @@
                     type="text"
                     placeholder="Введите ФИО контакта"
                     value="{{ itemContact.firstName + ' ' + itemContact.lastName }}"
+                    formControlName="fullName"
                 />
             </mat-form-field>
         </div>
@@ -36,8 +36,8 @@
         </div>
         <div class="base-inputs">
             <mat-form-field class="comment-input-box" appearance="outline" color="accent">
-                <input matInput type="text" placeholder="Введите комментарий" />
+                <input matInput type="text" placeholder="Введите комментарий" formControlName="comment"/>
             </mat-form-field>
         </div>
-    </div>
+    </form>
 </div>
