--- a/src/app/pages/main-page/operator-base/operator-base.component.html
+++ b/src/app/pages/main-page/operator-base/operator-base.component.html
@@ -1,9 +1,14 @@
 <app-tool-bar-operator></app-tool-bar-operator>
-<app-side-bar-operator class="left-list"></app-side-bar-operator>
 <div class="info-client">
+    <app-side-bar-operator class="left-list"></app-side-bar-operator>
     <app-info-client></app-info-client>
 </div>
-<div class="flex-tabs">
-    <app-operator-tabs></app-operator-tabs>
+<nav mat-tab-nav-bar>
+    <a mat-tab-link routerLink="contact" routerLinkActive="Contact">Контактность</a>
+    <a mat-tab-link routerLink="contact" routerLinkActive="Contact">Адрес</a>
+</nav>
+<div class="grids-elements">
+  <div></div>
+  <app-operator-tabs></app-operator-tabs>
+  <app-right-list class="right-list"></app-right-list>
 </div>
-<app-right-list class="right-list"></app-right-list>
