--- a/src/app/pages/main-page/operator-base/operator-base.component.html
+++ b/src/app/pages/main-page/operator-base/operator-base.component.html
@@ -1,9 +1,11 @@
 <app-tool-bar-operator></app-tool-bar-operator>
 <app-side-bar-operator class="left-list"></app-side-bar-operator>
-<div class="info-client">
-    <app-info-client></app-info-client>
-</div>
-<div class="flex-tabs">
-    <app-operator-tabs></app-operator-tabs>
+<div class="wrapper">
+    <div class="info-client">
+        <app-info-client></app-info-client>
+    </div>
+    <div class="flex-tabs">
+        <app-operator-tabs></app-operator-tabs>
+    </div>
 </div>
 <app-right-list class="right-list"></app-right-list>
