--- a/src/app/components/dumb/side-bar-operator/side-bar-operator.component.scss
+++ b/src/app/components/dumb/side-bar-operator/side-bar-operator.component.scss
@@ -6,9 +6,7 @@
 mat-sidenav {
     height: 100%;
     width: 350px;
-    -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.24);
-    -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.24);
-    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.24);
+    box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
 mat-sidenav-container {
