--- a/src/app/pages/main-page/operator-base/operator-base.component.scss
+++ b/src/app/pages/main-page/operator-base/operator-base.component.scss
@@ -1,8 +1,26 @@
+@import '../../../variables.scss';
+
+app-tool-bar-operator {
+    position: fixed;
+    top: 0;
+    z-index: $toolbar-z-index;
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+}
+
 .info-client {
     position: absolute;
     width: 100%;
     height: 200px;
     background-color: rgb(87, 82, 82);
+}
+
+.left-list {
+    position: fixed;
+    top: 64px;
+    bottom: 0;
+    z-index: $sidebar-z-index;
 }
 
 .right-list {
@@ -20,6 +38,6 @@ app-operator-tabs {
     width: 100%;
 }
 
-app-tool-bar-operator {
-    height: 64px;
+.wrapper {
+    margin-top: 64px;
 }
