--- a/src/app/components/dumb/operator-steps/operator-steps.component.html
+++ b/src/app/components/dumb/operator-steps/operator-steps.component.html
@@ -1,5 +1,5 @@
 <mat-list>
     <ng-container *ngFor="let step of stepsList$ | async">
-        <mat-list-item>{{ step.comment }}</mat-list-item>
+        <app-step [step]="step"></app-step>
     </ng-container>
 </mat-list>
