--- a/src/app/pages/main-page/operator-base/operator-base.component.html
+++ b/src/app/pages/main-page/operator-base/operator-base.component.html
@@ -4,11 +4,11 @@
     <app-info-client></app-info-client>
 </div>
 <nav mat-tab-nav-bar>
-    <a mat-tab-link routerLink="contact" routerLinkActive="Contact">Контактность</a>
-    <a mat-tab-link routerLink="contact" routerLinkActive="Contact">Адрес</a>
+    <a mat-tab-link routerLink="contact" routerLinkActive="Contact" class="route-link">Контактность</a>
+    <a mat-tab-link routerLink="contact" routerLinkActive="Contact" class="route-link">Адрес</a>
 </nav>
 <div class="grids-elements">
-  <div></div>
-  <app-operator-tabs></app-operator-tabs>
-  <app-right-list class="right-list"></app-right-list>
+    <div></div>
+    <app-operator-tabs></app-operator-tabs>
+    <app-right-list class="right-list"></app-right-list>
 </div>
