--- a/src/app/pages/main-page/operator-base/operator-base.component.scss
+++ b/src/app/pages/main-page/operator-base/operator-base.component.scss
@@ -35,3 +35,9 @@ app-operator-tabs {
     position: absolute;
     width: 100%;
 }
+
+.mat-tab-link{
+  color: #4A7AB1;
+  opacity: 1;
+  font-weight: normal;
+}
