--- a/src/app/components/smart/contact/contact.component.scss
+++ b/src/app/components/smart/contact/contact.component.scss
@@ -8,16 +8,16 @@ mat-form-field {
     margin: 5px;
 }
 
-mat-icon{
-  cursor: pointer;
+app-phone-number-form {
+    flex: 1 1 auto;
 }
 
-mat-icon:hover{
-  opacity: 0.6;
+mat-icon {
+    cursor: pointer;
 }
 
-.input-and-call-btn{
-  display: flex;
+mat-icon:hover {
+    opacity: 0.6;
 }
 
 .comment-input-box {
