--- a/src/app/pages/main-page/operator-base/operator-base.component.html
+++ b/src/app/pages/main-page/operator-base/operator-base.component.html
@@ -4,8 +4,8 @@
     <app-info-client></app-info-client>
 </div>
 <nav mat-tab-nav-bar>
-    <a mat-tab-link routerLink="contact" routerLinkActive="Contact">Контактность</a>
-    <a mat-tab-link routerLink="contact" routerLinkActive="Contact">Адрес</a>
+    <a mat-tab-link routerLink="{{ contact }}" routerLinkActive="{{ contact }}">Контактность</a>
+    <a mat-tab-link routerLink="{{ contact }}" routerLinkActive="{{ contact }}">Адрес</a>
 </nav>
 <div class="grids-elements">
   <div></div>
