Изменил размеры инпутов

--- a/src/app/components/smart/contact/contact.component.scss
+++ b/src/app/components/smart/contact/contact.component.scss
@@ -5,7 +5,8 @@
 
 mat-form-field {
     flex: 1 1 auto;
-    margin: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 app-phone-number-form {
