--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,23 @@
-html, body { height: 100%; }
-body { margin: 0; font-family: Helvetica, sans-serif; }
-
-.app-comment{
-  position: relative;
-  display: block;
-  width: 100%;
-  height: 100%;
+html,
+body {
+    height: 100%;
+}
+body {
+    margin: 0;
+    font-family: Helvetica, sans-serif;
 }
 
-app-contact-tab{
-  position: relative;
+.app-comment {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+app-contact-tab {
+    position: relative;
+}
+
+.mat-form-field-appearance-outline .mat-form-field-flex {
+    height: 65px;
 }
