Сделал UI более интуинтивно понятныйм, добавив разделители, отступы и иконку, чтобы возможно было отличить шаги

--- a/src/app/components/dumb/operator-steps/operator-steps.component.html
+++ b/src/app/components/dumb/operator-steps/operator-steps.component.html
@@ -1,11 +1,15 @@
 <mat-list>
-    <h3 mat-subheader>Шаги с телефоном</h3>
+    <h3 mat-subheader>Без звонка</h3>
     <ng-container *ngFor="let step of stepsList$ | async">
-        <app-step-with-phone-number [step]="step"></app-step-with-phone-number>
+        <app-step [step]="step"></app-step>
     </ng-container>
 </mat-list>
 <mat-list>
+    <div class="title-list">
+        <h3 mat-subheader>Звонок заявителю</h3>
+        <mat-icon>call</mat-icon>
+    </div>
     <ng-container *ngFor="let step of stepsList$ | async">
-        <app-step [step]="step"></app-step>
+        <app-step-with-phone-number [step]="step"></app-step-with-phone-number>
     </ng-container>
 </mat-list>
