--- a/src/app/components/dumb/step-with-phone-number/step-with-phone-number.component.scss
+++ b/src/app/components/dumb/step-with-phone-number/step-with-phone-number.component.scss
@@ -13,7 +13,6 @@ mat-list-item:hover {
 .more-information {
     font-size: 8px;
     color: #6185b3;
-    cursor: pointer;
 }
 
 .description {
@@ -21,4 +20,8 @@ mat-list-item:hover {
     color: #656565;
     padding: 16px;
     word-break: break-all;
+}
+
+span{
+  cursor: pointer;
 }
