--- a/src/app/components/dumb/step/step.component.scss
+++ b/src/app/components/dumb/step/step.component.scss
@@ -16,7 +16,6 @@ mat-list-item:hover {
 .more-information {
     font-size: 8px;
     color: #6185b3;
-    cursor: pointer;
 }
 
 .description {
@@ -24,4 +23,8 @@ mat-list-item:hover {
     color: #656565;
     padding: 16px;
     word-break: break-all;
+}
+
+span{
+  cursor: pointer;
 }
