--- a/src/app/components/dumb/info-client/info-client.component.scss
+++ b/src/app/components/dumb/info-client/info-client.component.scss
@@ -1,5 +1,6 @@
 .info-client {
     width: 55%;
+    padding-top: 30px;
     margin-left: 20%;
     margin-right: auto;
 }
@@ -25,6 +26,6 @@
     border-radius: 5px;
 }
 
-h3{
-  margin: 0
+h3 {
+    margin: 0;
 }
