--- a/src/app/components/dumb/comment/comment.component.html
+++ b/src/app/components/dumb/comment/comment.component.html
@@ -14,7 +14,7 @@
 <div class="comment-list">
     <mat-card *ngFor="let comment of commentList$ | async" class="comment-card">
         <mat-card-title-group>
-            <mat-card-title>Сообщение системы</mat-card-title>
+            <mat-card-title>Сообщение от {{comment.name}}</mat-card-title>
             <mat-card-subtitle>{{ comment.createdAt | date }}</mat-card-subtitle>
         </mat-card-title-group>
         <mat-card-content>
