Добавлен новый комонент Рендеринг видео

--- a/src/app/components/smart/contact/contact.component.html
+++ b/src/app/components/smart/contact/contact.component.html
@@ -1,9 +1,8 @@
+<app-video-rendering [sourceVideo]='//www.youtube.com/embed/1ozGKlOzEVc'></app-video-rendering>
 <div class="form-container">
     <form [formGroup]="contactForm" (ngSubmit)="submit()">
         <div class="base-inputs">
-            <app-phone-number-form [contact]="contact" [contactForm]="contactForm">
-
-            </app-phone-number-form>
+            <app-phone-number-form [contact]="contact" [contactForm]="contactForm"> </app-phone-number-form>
             <mat-form-field appearance="outline" color="accent">
                 <mat-label>ФИО контакта</mat-label>
                 <input
