Правки по компоненту. Сделал автоплей и клики по поинтам

--- a/src/app/components/feature/contact-tab/contact-tab.component.html
+++ b/src/app/components/feature/contact-tab/contact-tab.component.html
@@ -1,3 +1,5 @@
+<app-video-rendering [sourceVideo]='//www.youtube.com/embed/1ozGKlOzEVc'></app-video-rendering>
 <ng-container *ngFor="let contact of informationList$ | async">
     <app-contact [contact]="contact"></app-contact>
 </ng-container>
+
