--- a/src/app/components/smart/circle-progress/circle-progress.component.html
+++ b/src/app/components/smart/circle-progress/circle-progress.component.html
@@ -1,11 +1,11 @@
 <div class="container-progress">
     <circle-progress
-        [percent]="duration"
+        [percent]="percent"
         [radius]="30"
         [outerStrokeWidth]="4"
         [innerStrokeWidth]="0"
-        [outerStrokeColor]="'#f5ff00'"
-        [innerStrokeColor]="'#fffb00'"
+        [outerStrokeColor]="'#F7D955'"
+        [innerStrokeColor]="'#F7D955'"
         [animation]="false"
         [animationDuration]="300"
     ></circle-progress>
