--- a/src/app/components/smart/video-rendering/video-rendering.component.html
+++ b/src/app/components/smart/video-rendering/video-rendering.component.html
@@ -1,8 +1,13 @@
 <div class="container-steps-video">
-    <div>
+    <div class="container-table-steps">
         <h3>Выполните действия:</h3>
         <div *ngFor="let item of listOfSteps; let i = index" class="step-line">
-            <app-circle-progress [number]="i+1" [minTime]="item.minTime" [maxTime]="item.maxTime"></app-circle-progress>
+            <app-circle-progress
+                [number]="i + 1"
+                [minTime]="item.minTime"
+                [maxTime]="item.maxTime"
+                (click)="toSnapShotPoint(item.minTime)"
+            ></app-circle-progress>
             <div class="description-step">
                 {{ item.description }}
             </div>
@@ -10,7 +15,7 @@
     </div>
     <div>
         <div class="video">
-            <video controls #videoPlayer>
+            <video #videoPlayer autoplay="true">
                 <source src="../../../../assets/video.mp4" type="video/mp4" />
                 Browser not supported
             </video>
