--- a/src/app/components/smart/circle-progress/circle-progress.component.html
+++ b/src/app/components/smart/circle-progress/circle-progress.component.html
@@ -1,6 +1,6 @@
 <div class="container-progress">
     <circle-progress
-        [percent]="percent"
+        [percent]="percent$ | async"
         [radius]="30"
         [outerStrokeWidth]="4"
         [innerStrokeWidth]="0"
