--- a/src/app/components/dumb/operator-steps/operator-steps.component.scss
+++ b/src/app/components/dumb/operator-steps/operator-steps.component.scss
@@ -19,3 +19,9 @@ mat-icon {
     cursor: default;
     margin: 5px;
 }
+
+.container-step-with-number {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
