--- a/src/app/components/feature/video-rendering-tab/video-rendering-tab.component.html
+++ b/src/app/components/feature/video-rendering-tab/video-rendering-tab.component.html
@@ -1,3 +1,5 @@
+<app-video-divider [snapshotPoints]="snapshotPoints" [sourceVideo]="sourceVideo" [title]="title"></app-video-divider>
+
 <app-video-rendering
     [snapshotPoints]="snapshotPoints"
     [sourceVideo]="sourceVideo"
