--- a/src/app/components/smart/video-rendering/video-rendering.component.html
+++ b/src/app/components/smart/video-rendering/video-rendering.component.html
@@ -11,7 +11,7 @@
         </div>
     </div>
 
-    <video width="400" height="300" preload="metadata" #video class="video">
+    <video #video width="400" height="300" preload="metadata" class="video">
         <source [src]="sourceVideo" type="video/mp4" />
     </video>
 </div>
