--- a/src/app/components/smart/video-rendering/video-rendering.component.html
+++ b/src/app/components/smart/video-rendering/video-rendering.component.html
@@ -1,24 +1,24 @@
-<div class="container-steps-video">
+<div class="content-info">
+    <h3>Выполните действия:</h3>
     <div class="container-table-steps">
-        <h3>Выполните действия:</h3>
-        <div *ngFor="let item of listOfSteps; let i = index" class="step-line">
+        <ng-container *ngFor="let item of listOfSteps; let i = index">
             <app-circle-progress
                 [number]="i + 1"
+                [description]="item.description"
                 [minTime]="item.minTime"
                 [maxTime]="item.maxTime"
                 (click)="toSnapShotPoint(item.minTime)"
             ></app-circle-progress>
-            <div class="description-step">
-                {{ item.description }}
-            </div>
-        </div>
+        </ng-container>
     </div>
-    <div>
-        <div class="video">
-            <video #videoPlayer autoplay="true">
-                <source src="../../../../assets/video.mp4" type="video/mp4" />
-                Browser not supported
-            </video>
-        </div>
+    <div class="gradient-container-decorator">
+        <div class="gradient-element-decorator"></div>
     </div>
+</div>
+
+<div class="video-container">
+    <video #videoPlayer autoplay="true">
+        <source src="../../../../assets/video.mp4" type="video/mp4" />
+        Browser not supported
+    </video>
 </div>
