--- a/src/app/components/smart/video-rendering/video-rendering.component.scss
+++ b/src/app/components/smart/video-rendering/video-rendering.component.scss
@@ -1,5 +1,5 @@
-.step-line {
-    display: flex;
+::-webkit-scrollbar {
+    width: 0px;
 }
 
 .description-step {
@@ -11,21 +11,47 @@
     margin-left: 15px;
 }
 
-.container-steps-video {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-}
-
 video {
-    height: 100%;
     width: 100%;
 }
 
 .container-table-steps {
-    padding: 10px;
-    height: 100%;
+    overflow: auto;
 }
 
-h3{
-  color: #333333;
+:host {
+    display: grid;
+    height: 250px;
+    grid-template-columns: 1fr 2fr;
+    background-color: #f5f5f6;
+    width: 100%;
+}
+
+.video-container {
+    overflow: hidden;
+}
+
+.content-info {
+    display: grid;
+    grid-template-rows: 1fr 3fr;
+    height: inherit;
+}
+
+.container-table-steps,
+h3 {
+    padding: 0 10px;
+}
+
+.gradient-element-decorator {
+    display: block;
+    position: absolute;
+    background: dimgray;
+    background: linear-gradient(0deg, #cdcdcd 0%, rgba(105, 105, 105, 0) 90%);
+    height: 3em;
+    width: 100%;
+    bottom: 0px;
+}
+
+.gradient-container-decorator {
+    position: relative;
 }
