--- a/src/app/components/dumb/tool-bar-operator/tool-bar-operator.component.html
+++ b/src/app/components/dumb/tool-bar-operator/tool-bar-operator.component.html
@@ -13,6 +13,7 @@
             />
             <span (click)="redirectToTask()" class="verification">Верификация</span>
         </div>
+        <app-call-widget *ngIf="isShowCallWidget$ | async"></app-call-widget>
         <div (mouseenter)="showUserMenu(true)" class="user-section-toolbar">
             <img class="icons-toolbar" src="https://image.flaticon.com/icons/svg/149/149071.svg" />
             <div class="text-info-toolbar">
