--- a/src/app/components/smart/phone-number-form/phone-number-form.component.html
+++ b/src/app/components/smart/phone-number-form/phone-number-form.component.html
@@ -9,7 +9,7 @@
                 value="{{ contact.phone }}"
                 formControlName="numberPhone"
             />
-            <mat-icon *ngIf="!callStatus; else callOff" (click)="toggleCall(contact.phone)">call</mat-icon>
+            <mat-icon *ngIf="!callStatus; else callOff" (click)="toggleCall(contact)">call</mat-icon>
             <ng-template #callOff>
                 <mat-icon (click)="toggleCall('off')">call_end</mat-icon>
             </ng-template>
