--- a/src/app/pages/main-page/operator-base/operator-base.component.html
+++ b/src/app/pages/main-page/operator-base/operator-base.component.html
@@ -6,6 +6,7 @@
 <nav mat-tab-nav-bar>
     <a mat-tab-link routerLink="{{ contact }}" routerLinkActive="{{ contact }}">Контактность</a>
     <a mat-tab-link routerLink="{{ laborActivity }}" routerLinkActive="{{ laborActivity }}">Трудовая деятельность</a>
+    <a mat-tab-link routerLink="{{ video }}" routerLinkActive="{{ video }}">Видео</a>
 </nav>
 <div class="grids-elements">
     <div></div>
