--- a/src/app/components/dumb/call-widget/call-widget.component.html
+++ b/src/app/components/dumb/call-widget/call-widget.component.html
@@ -6,7 +6,7 @@
     <div class="control-buttons">
         <div class="clock-timer-container">
           <mat-icon>alarm</mat-icon>
-          <div class="clock-timer">13:30</div>
+          <div class="clock-timer">00:{{source | async}}</div>
         </div>
 
         <mat-icon>micro</mat-icon>
