--- a/src/app/components/dumb/info-labor-activity-client/info-labor-activity-client.component.html
+++ b/src/app/components/dumb/info-labor-activity-client/info-labor-activity-client.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="clientLaborActivity$ | async as clientLaborActivity" class="labor-activity">
+<div *ngIf="clientLaborActivity" class="labor-activity">
     <div class="section-1">
         <span class="position">{{ clientLaborActivity.position }}</span>
         <span class="occupation">{{ clientLaborActivity.occupation }}</span>
