--- a/src/app/components/dumb/info-client/info-client.component.scss
+++ b/src/app/components/dumb/info-client/info-client.component.scss
@@ -1,9 +1,17 @@
 .info-client {
+    background-color: rgb(87, 82, 82);
+    width: 100%;
+    padding-top: 30px;
+    height: 170px;
+    margin-top: 64px;
+}
+
+.info-client-wrapper {
     width: 55%;
     margin-left: 20%;
-    padding-top: 30px;
     margin-right: auto;
 }
+
 .full-name {
     color: rgb(231, 228, 228);
     font-size: 22px;
